RESOLVED FIXED259531
[Tables] Do not try to invalidate columns when the entire table is being destroyed
https://bugs.webkit.org/show_bug.cgi?id=259531
Summary [Tables] Do not try to invalidate columns when the entire table is being dest...
alan
Reported 2023-07-26 13:08:53 PDT
Attachments
Patch (4.51 KB, patch)
2023-07-26 13:18 PDT, alan
no flags
alan
Comment 1 2023-07-26 13:18:00 PDT
EWS
Comment 2 2023-07-26 17:59:11 PDT
Committed 266344@main (e1cc9fc57dbe): <https://commits.webkit.org/266344@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 467125 [details].
Note You need to log in before you can comment on or make changes to this bug.