[Tables] Do not try to invalidate columns when the entire table is being destroyed https://bugs.webkit.org/show_bug.cgi?id=259531 <rdar://111803504>

Reviewed by Ryosuke Niwa.

Subtree teardown logic with anonymous root (e.g. continuation) has a parent -> child direction as opposed to the regular teardown direction which is child -> parent.
In case when we run top-bottom teardown, we don't have to invalidate the column cache as the table is being destroyed as well.

* LayoutTests/fast/table/table-inside-continuation-removed-expected.txt: Added.
* LayoutTests/fast/table/table-inside-continuation-removed.html: Added.
* Source/WebCore/rendering/RenderTable.cpp:
(WebCore::RenderTable::invalidateColumns):
(WebCore::RenderTable::removeColumn): Deleted.
* Source/WebCore/rendering/RenderTable.h:
* Source/WebCore/rendering/RenderTableCol.cpp:
(WebCore::RenderTableCol::willBeRemovedFromTree):

Canonical link: https://commits.webkit.org/266344@main